<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">度假宝</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- 注册 -->
    <string name="login_name_hit">手机号或电子邮箱</string>
    <string name="login_pwd_hit">登录密码</string>
    <string name="register_name_hit">手机号</string>
    <string name="register_pwd_hit">6-18位登录密码</string>
    <string name="check_msg_hit">短信验证码</string>
    <string name="check_hit">验证</string>
    <string name="new_pwd_hit">新密码</string>
    <string name="renew_pwd_hit">重复新密码</string>
    <string name="tk_hit">轻触下面的"完成"按钮，即表示你同意</string>
    <string name="tk_link">《度假宝服务协议》</string>
    <!-- button -->
    <string name="btn_sub_hit">完成</string>
    <string name="btn_submit_hit">提交</string>
    <string name="btn_next_hit">下一步</string>
    <string name="btn_login_hit">登录</string>
    <string name="register_link">立即注册</string>
    <string name="pwd_link">忘记密码</string>
    <string name="_logo">度假宝logo</string>
    <string name="_login">登  录</string>
    <string name="_register">注  册</string>
    <string name="tx_cardNo">个人消费卡卡号</string>
    <string name="cz_pssword_6">6位数字密码</string>
    <string name="bind_hit">绑定</string>
    <string name="_enter">确  定</string>
    <string name="_clear">取  消</string>
    <string name="balance_msg">为保证您的账户安全，须真实填写上述信息</string>
    <string name="paypassword_hit">6位支付密码</string>
    <string name="re_paypassword_hit">重复支付密码</string>
    <string name="_idNo">证件号</string>
    <string name="member_name_hit">真实姓名</string>
    <string name="_manage_hit">管 理</string>
    <string name="_hsl_card_hit">红树林卡</string>
    <string name="_balance_hit">账户余额</string>
    <string name="menu_hit">菜单</string>
    <string name="app_ok">确定</string>
    <string name="app_cancel">取消</string>
   <string name="_amount">￥%1$s</string>
    <string name="pay_amount">金额 %1$s</string>
   
   <string name="wallet_hit">度假宝钱包</string>
   <string name="scan_payment_hit">扫码支付</string>
   <string name="account_recharge_hit">账户余额充值</string>
   <string name="transfer_hit">转账</string>
   <string name="msg_info_hit">消息中心</string>
   <string name="setting_hit">设置</string>
   <string name="about_us_hit">关于我们</string>
   <string name="opinion_hit">意见反馈</string>
   <string name="recharge_price_hit">充值金额</string>
   <string name="wx_msg_hit">现在只支持微信客户端支付</string>
   <string name="_merchant">商户</string>
   <string name="order_no_hit">订单号</string>
   <string name="select_pay_type_hit">选择支付方式</string>
   <string name="amount_payable_hit">应付金额</string>
   <string name="_discount_hit">折扣</string>
   <string name="actual_payments_hit">实际支付金额</string>
   <string name="pay_pwd_hit">请输入密码</string>
   <string name="_kyed_price">可用额度￥%1$s</string>
    <string name="last_cardNo">尾号￥%1$s</string>
    <string name="_price_hit">支付金额</string>
    <string name="change_passsword">修改登录密码</string>
    <string name="change_pay_password_hit">修改支付密码</string>
    <string name="find_pay_password_hit">找回支付密码</string>
    <string name="change_phone_hit">更换绑定手机</string>
    <string name="about_hit">关于</string>
    <string name="btn_return_login_hit">安全退出</string>
    <string name="out_account_transfer_hit">转出账户</string>
    <string name="transfer_amount_hit">转账金额</string>
    <string name="transfer_account_phone_hit">转入账户手机号</string>
    <string name="bind_phone_hit">新手机号</string>
    <string name="re_login_password_hit">重复新登录密码</string>
    <string name="new_login_password_hit">新登录密码</string>
    <string name="login_password_hit">原登录密码</string>
    <string name="pay_password_hit">原支付密码</string>
    <string name="new_pay_password_hit">新6位支付密码</string>
    <string name="re_pay_password_hit">重复新支付密码</string>
    <string name="new_password_hit">新密码</string>
    <string name="re_password_hit">重复新密码</string>
    <string name="account_agreement_hit">《账户储值协议》</string>
    <string name="updata_check_hit">检查版本更新</string>
    <string name="_clear_cache">清除缓存</string>
</resources>