<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- +++++++++注册信息++++++++++++++++++++++++++++++++++++ -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
         android:focusable="true"  
   android:focusableInTouchMode="true"
        android:paddingLeft="@dimen/panding_18" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal" >

            <com.jdjt.mangrovepay.view.ClearEditText
                android:id="@+id/register_account"
                style="@style/common_input"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_account"
                android:hint="@string/register_name_hit"
                android:inputType="number"
                android:textSize="@dimen/textsize_30" />

            <Button
                android:id="@+id/register_valitation"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_marginRight="18dp"
                android:background="@null"
                android:clickable="true"
                android:text="@string/check_hit"
                android:textColor="@color/btn_txt_blue_bg"
                android:textSize="@dimen/textsize_28" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_color_in" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal" >

            <com.jdjt.mangrovepay.view.ClearEditText
                android:id="@+id/register_password"
                style="@style/common_input"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:drawableLeft="@drawable/ic_password"
                android:hint="@string/register_pwd_hit"
                android:inputType="textPassword"
                android:textColorHint="@color/line_color_out"
                android:textSize="@dimen/textsize_30" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_color_in" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/register_security_code"
                style="@style/common_input"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_phone"
                android:hint="@string/check_msg_hit"
                android:inputType="number" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_color_out" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible" >

        <TextView
            android:id="@+id/tx_tk"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/tk_hit"
            android:textColor="@color/text_gray_lable"
            android:textSize="@dimen/textsize_28" />
    </LinearLayout>

    <Button
        android:id="@+id/register_agree_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@null"
        android:text="@string/tk_link"
        android:textColor="@color/btn_txt_blue_bg"
        android:textSize="@dimen/textsize_28" />

    <Button
        android:id="@+id/register_button"
        style="@style/AppBtn"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/panding_18"
        android:layout_marginTop="41dp"
        android:enabled="false"
        android:text="@string/_register" />

</LinearLayout>