<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:paddingLeft="@dimen/panding_18"
            android:paddingRight="@dimen/panding_18" >

            <com.jdjt.mangrovepay.view.ClearEditText
                android:id="@+id/pay_password"
                style="@style/common_input"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:ems="10"
                android:hint="@string/paypassword_hit"
                android:inputType="numberPassword" />

            <com.jdjt.mangrovepay.view.ClearEditText
                android:id="@+id/pay_password_re"
                style="@style/common_input"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:layout_alignLeft="@+id/pay_password"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/pay_password"
                android:ems="10"
                android:hint="@string/re_paypassword_hit"
                android:inputType="numberPassword" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignBottom="@+id/pay_password"
                android:layout_alignParentLeft="true"
                android:background="@color/line_color_in" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignBottom="@+id/pay_password_re"
                android:background="@color/line_color_in" />
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible" >

        <TextView
            android:id="@+id/tx_tk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/tk_hit"
            android:textColor="@color/text_gray_lable"
            android:textSize="@dimen/textsize_28" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_account_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/account_agreement_hit"
        android:textColor="@color/btn_txt_blue_bg"
        android:textSize="@dimen/textsize_28" />

    <Button
        android:id="@+id/btn_set_password"
        style="@style/AppBtn"
        android:layout_width="match_parent"
        android:enabled="false"
        android:text="@string/btn_sub_hit" />

</LinearLayout>