<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:background="@color/left_bg_selected"
        android:gravity="center_vertical"
        android:orientation="vertical"
      >

        <TextView
            android:id="@+id/tx_pay_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/imageView1"
            android:layout_marginTop="17dp"
            android:layout_toRightOf="@+id/imageView1"
            android:layout_marginLeft="12dp"
            android:text="@string/_price_hit"
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_30" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="26dp"
            android:src="@drawable/ic_success" />

        <TextView
            android:id="@+id/tx_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tx_pay_amount"
            android:layout_below="@+id/tx_pay_amount"
            android:layout_marginTop="6dp"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/textsize_72" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlayout01"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/panding_18"
        android:paddingRight="@dimen/panding_18" >

        <TextView
            android:id="@+id/tx_sh"
            style="@style/st_text_lable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_merchant" />

        <TextView
            android:id="@+id/tx_merchant_name"
            style="@style/st_text_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/line_color_in" />

    <Button
        android:id="@+id/btn_paysuccess_next"
        style="@style/AppBtn"
        android:layout_width="match_parent"
        android:text="@string/btn_sub_hit" />

</LinearLayout>