<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- +++++++++注册信息++++++++++++++++++++++++++++++++++++ -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/panding_18" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/change_phone_valitation"
                android:layout_width="wrap_content"
                android:layout_height="34dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="18dp"
                android:background="@null"
                android:clickable="true"
                android:text="@string/check_hit"
                android:textColor="@color/btn_txt_blue_bg"
                android:textSize="@dimen/textsize_28" />

            <TextView
                android:id="@+id/tx_change_phone"
                style="@style/st_text_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/change_phone_valitation"
                android:layout_toRightOf="@+id/imageView1"
                android:gravity="center_vertical"
                android:text="" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_account" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_color_in" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal" >

            <com.jdjt.mangrovepay.view.ClearEditText
                android:id="@+id/change_phone_valid_code"
                style="@style/common_input"
                android:layout_width="0dp"
                android:layout_height="58dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_phone"
                android:hint="@string/check_msg_hit"
                android:inputType="number" >

                <requestFocus />
            </com.jdjt.mangrovepay.view.ClearEditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line_color_out" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_change_phone"
        style="@style/AppBtn"
        android:layout_width="match_parent"
        android:layout_margin="@dimen/panding_18"
        android:layout_marginTop="41dp"
        android:enabled="false"
        android:text="@string/btn_next_hit" />

</LinearLayout>